src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* html {
    @apply bg-stone-200;
  } */
  body {
    @apply bg-stone-200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

@media only screen and (max-width: 645px) {
  div {
    scrollbar-width: none;
  }
}
@media only screen and (min-width: 645px) {
  div {
    scrollbar-width: thin;
  }
}

